# python-advanced

hw_1/: README.md  main.py  pyproject.toml
hw_1/artifacts/: nl_input1.txt  nl_output1.txt  tail_input1.txt  tail_input2.txt  tail_input3.txt  tail_output_0_files.txt  tail_output_1_2_3_files_txt  tail_output_1_file.txt
hw_1/cli/: init.py  nl.py  tail.py  wc.py
hw_3/: main.py  pyproject.toml
hw_3/hw_3/: init.py  matrix.py
hw_4/: main.py  pyproject.toml
hw_4/artifacts/: 4.1.txt  4.2.txt
hw_4/hw_4/: fibonacci.py  init.py  integrate.py
