[tool.poetry]
name = "hw_3"
version = "0.1.0"
description = "matrix operations"
authors = ["TimurUrazov <tu177086@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = ">=1.24.3,<1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
